fix link to about section with overlapping navbar

--- a/style.css
+++ b/style.css
@@ -22,7 +22,8 @@
 }
 
 html, body {
-    height: 100%
+    height: 100%;
+    scroll-behavior: smooth;
 }
 
 body {
@@ -265,6 +266,7 @@ section {
 .about {
     display: grid;
     gap: 16px;
+    scroll-margin-top: 30vh;
 }
 
 .timeline {
